[package]
name = "eutracker-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
crossterm = "0.26.1"
glob = "0.3.1"
humantime-serde = "1.1.1"
notify = "5.1.0"
regex = "1.8.1"
rust_decimal = "1.29.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_with = { version = "3.0.0", features = ["chrono"] }
tui = "0.19.0"
